--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -475,11 +475,15 @@ OCV_OPTION(WITH_TIMVX "Include Tim-VX support" OFF
   VISIBLE_IF TRUE
   VERIFY HAVE_TIMVX)
 # Attention when OBSENSOR_USE_ORBBEC_SDK set to off:
-#   Astra2, Gemini2, and Gemini2L cameras currently only support Windows and Linux kernel versions no higher than 4.15, and higher versions of Linux kernel may have exceptions.
+#   Astra2 cameras currently only support Windows and Linux kernel versions no higher than 4.15, and higher versions of Linux kernel may have exceptions.
 OCV_OPTION(OBSENSOR_USE_ORBBEC_SDK "Use Orbbec SDK as banckend to support more camera models and platforms (force to ON on MacOS)" OFF)
 OCV_OPTION(WITH_OBSENSOR "Include obsensor support (Orbbec 3D Cameras)" ON
   VISIBLE_IF (WIN32 AND NOT ARM AND NOT WINRT AND NOT MINGW) OR ( UNIX AND NOT APPLE AND NOT ANDROID) OR (APPLE AND AARCH64 AND NOT IOS AND NOT X86_64 AND NOT X86)
   VERIFY HAVE_OBSENSOR)
+# If you need to use an orbbec camera on the MacOS system, you need to switch the WITH_OBSENSOR value to ON or comment out this code
+if(APPLE)
+set(WITH_OBSENSOR OFF)
+endif()
 OCV_OPTION(WITH_CANN "Include CANN support" OFF
   VISIBLE_IF TRUE
   VERIFY HAVE_CANN)
